fix(footer): remove bottom white space

--- a/src/app/front-end/footer/footer.component.scss
+++ b/src/app/front-end/footer/footer.component.scss
@@ -3,7 +3,7 @@
 .footer {
   background-color: $blue-grey;
   color: $white;
-  height: 950px;
+  // height: 950px;
 }
 
 .social-media-container {
@@ -115,6 +115,8 @@ label {
 .more-info {
   @extend %contact-info;
   font-size: 16px;
+  margin-bottom: 0;
+  padding-bottom: 60px;
 
   li {
     padding: 5px;
